MCR-3274 Enable PMD rule ProperLogger (#2385)
* MCR-3274 Enable PMD rule ProperLogger

* MCR-3274 organize imports